syntax = "proto3";option java_multiple_files = true;option java_package = "io.rpc.testwa.msg";option java_outer_classname = "MsgProto";option objc_class_prefix = "MSG";package message;message UserInfo {    string email = 1;    string phone = 2;    string username = 3;    bool isActive = 4;}message Register {    UserInfo user = 1;    string url = 2;}message Forget {    UserInfo user = 1;    string url = 2;}message Invite {    UserInfo inviter = 1;    string inviteeEmail = 2;    string inviteeName = 3;    string url = 4;}